@@ -14,6 +14,8 @@ PLG_DEBUG_FIELD_LANGUAGE_FILES_DESC="Display a list of the language files that J
 PLG_DEBUG_FIELD_LANGUAGE_FILES_LABEL="Show Language Files"
 PLG_DEBUG_FIELD_LANGUAGE_STRING_DESC="Display a list of the untranslated language strings."
 PLG_DEBUG_FIELD_LANGUAGE_STRING_LABEL="Show Language String"
+PLG_DEBUG_FIELD_LOG_DEPRECATED_DESC="If enabled, API marked as deprecated will be logged. Only use this setting for short periods of time for refactoring purposes."
+PLG_DEBUG_FIELD_LOG_DEPRECATED_LABEL="Log deprecated API"
 PLG_DEBUG_FIELD_MEMORY_DESC="Display the total memory usage."
 PLG_DEBUG_FIELD_MEMORY_LABEL="Show Memory Usage"
 PLG_DEBUG_FIELD_PROFILING_DESC="Display the profiling waypoints."
@@ -32,12 +34,13 @@ PLG_DEBUG_INFO="Information"
 PLG_DEBUG_LANGUAGE_FIELDSET_LABEL="Language Options"
 PLG_DEBUG_LANGUAGE_FILES_IN_ERROR="Parsing errors in language files"
 PLG_DEBUG_LANGUAGE_FILES_LOADED="Language Files Loaded"
+PLG_DEBUG_LOGGING_FIELDSET_LABEL="Logging"
 PLG_DEBUG_MEMORY_USAGE="Memory Usage"
 PLG_DEBUG_OTHER_QUERIES="OTHER Tables:"
 PLG_DEBUG_PROFILE_INFORMATION="Profile Information"
 PLG_DEBUG_QUERIES_LOGGED="%d Queries Logged"
-PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES="%2$d &#215; %1$s"
 PLG_DEBUG_QUERY_TYPES_LOGGED="%d Query Types Logged, Sorted by Occurrences."
+PLG_DEBUG_QUERY_TYPE_AND_OCCURRENCES="%2$d &#215; %1$s"
 PLG_DEBUG_SELECT_QUERIES="SELECT Tables:"
 PLG_DEBUG_UNKNOWN_FILE="Unknown file"
 PLG_DEBUG_UNTRANSLATED_STRINGS="Untranslated Strings"
