@@ -27,11 +27,14 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
-03-June-2011 Jean-Marie Simonet
+04-Jun
+ + Feature [#25866] Add support to log deprecated API.
+ 
+03-Jun-2011 Jean-Marie Simonet
  + [#26035] *Adding the possibility for language packs to include a css file for back-end font change
  # [#25918] *Error when Login Module try to get the return URL of the current page when SEF turn on and the page is redirect forever
 
-01-June-2011 Jean-Marie Simonet
+01-Jun-2011 Jean-Marie Simonet
  #$ [#26023] *Preventing setting more than 1 default home menu item per menu
 
 ========== VERSION 1.7 ALPHA RELEASED ==========
